--- a/examples/resume-ptbr.tex
+++ b/examples/resume-ptbr.tex
@@ -20,6 +20,9 @@
 % A4 paper size by default, use 'letterpaper' for US letter
 \documentclass[11pt, a4paper]{awesome-cv}
 
+% Portuguese babel package
+\usepackage[portuguese]{babel}
+
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.8cm, right=1.4cm, bottom=1.8cm, footskip=.5cm}
 
@@ -53,15 +56,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Byungjin}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Diego}{Assis}
+\position{Engenheiro de Software}
+%\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{+55 (19) 99247-5859}
+\email{diego.assis@gmail.com}
+\homepage{dieguim.github.io}
+\github{dieguim}
+\linkedin{dieguim}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +76,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -87,7 +90,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Byungjin Park~~~·~~~Résumé}
+  {Diego Assis}
   {\thepage}
 
 
@@ -95,14 +98,15 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/summary.tex}
-\input{resume/experience.tex}
-\input{resume/honors.tex}
-\input{resume/presentation.tex}
-\input{resume/writing.tex}
-\input{resume/committees.tex}
-\input{resume/education.tex}
-\input{resume/extracurricular.tex}
+\input{resume-ptbr/summary.tex}
+\input{resume-ptbr/education.tex}
+\input{resume-ptbr/experience.tex}
+\input{resume-ptbr/skills.tex}
+\input{resume-ptbr/honors.tex}
+\input{resume-ptbr/presentation.tex}
+\input{resume-ptbr/writing.tex}
+\input{resume-ptbr/committees.tex}
+\input{resume-ptbr/extracurricular.tex}
 
 
 %-------------------------------------------------------------------------------
