--- a/examples/resume-ptbr/education.tex
+++ b/examples/resume-ptbr/education.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsection{Educação}
 
 
 %-------------------------------------------------------------------------------
@@ -11,14 +11,14 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Computer Science and Engineering} % Degree
-    {POSTECH(Pohang University of Science and Technology)} % Institution
-    {Pohang, S.Korea} % Location
-    {Mar. 2010 - Aug. 2017} % Date(s)
+    {Engenharia de Computação} % Degree
+    {Unicamp (Universidade Estadual de Campinas)} % Institution
+    {Campins, SP} % Location
+    {03/2003 — 07/2009} % Date(s)
     {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
-      \end{cvitems}
+      % \begin{cvitems} % Description(s) bullet points
+      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      % \end{cvitems}
     }
 
 %---------------------------------------------------------
