--- a/examples/resume-ptbr/summary.tex
+++ b/examples/resume-ptbr/summary.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Summary}
+\cvsection{Sobre}
 
 
 %-------------------------------------------------------------------------------
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Site Reliability Engineer at start-up company Kasa. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+Natural de Jataí, GO. Graduado em \textbf{Engenharia de Computação} pela \textbf{Unicamp} (Universidade Estadual de Campinas). Desde 2009, atua como \textbf{analista de desenvolvimento} de sistemas no Instituto de Química da Unicamp, desenvolvendo principalmente aplicações \textbf{web full stack} com \textit{Node.js}, \textit{Angular}, \textit{SQL} e \textit{MongoDB}. Fluente também em \textit{Python}, \textit{TypeScript}, \textit{Shell Script}, \textit{PHP} e \textit{Expressões Regulares}. Possui \textbf{sólida base conceitual}, \textbf{facilidade de adquirir novos conhecimentos} e \textbf{boa habilidade comunicativa}. Desde 2020 se interessou pela \textbf{área de Dados} e, desde então, se dedica a aprender cada vez mais e transformar seu foco de atuação.
 \end{cvparagraph}
