--- a/examples/resume-ptbr/education.tex
+++ b/examples/resume-ptbr/education.tex
@@ -13,7 +13,7 @@
   \cventry
     {Engenharia de Computação} % Degree
     {Unicamp (Universidade Estadual de Campinas)} % Institution
-    {Campins, SP} % Location
+    {Campinas, SP} % Location
     {03/2003 — 07/2009} % Date(s)
     {
       % \begin{cvitems} % Description(s) bullet points
