--- a/examples/resume-ptbr/experience.tex
+++ b/examples/resume-ptbr/experience.tex
@@ -38,7 +38,7 @@
         \item {Desenvolvimento com foco em aplicações multimídia (portal de \textit{streaming} e serviço de vídeo sob demanda)}
         \item {Produção e pós-produção audiovisual}
         \item {Suporte em aplicação de cursos \textit{online}}
-        \item {Desenvolvimento em \textit{PHP}, \textit{jQuery}, \textit{Vanilla JS} e \textit{Bash Script}. Trabalho instensivo com \textit{FFmpeg} e \textit{GIMP}}
+        \item {Desenvolvimento em \textit{PHP}, \textit{jQuery}, \textit{Vanilla JS} e \textit{Bash Script}. Trabalho intensivo com \textit{FFmpeg} e \textit{GIMP}}
       \end{cvitems}
     }
 
