fix: minor changes after review
- Add address to Personal Information
- Change item order in experience at Centro de Computação
- Fix typo in skills
- Join sentences in summary

--- a/examples/resume-ptbr/skills.tex
+++ b/examples/resume-ptbr/skills.tex
@@ -32,7 +32,7 @@
 %---------------------------------------------------------
   \cvskill
     {DevOps} % Category
-    {Docker, Kubernetes, Gilab CI/CD, Github Actions} % Skills
+    {Docker, Kubernetes, Gitlab CI/CD, Github Actions} % Skills
 
 %---------------------------------------------------------
   \cvskill
