--- a/examples/resume-ptbr.tex
+++ b/examples/resume-ptbr.tex
@@ -58,7 +58,7 @@
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Diego}{Assis}
 \position{Engenheiro de Software}
-%\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\address{Campinas, São Paulo - Brasil}
 
 \mobile{+55 (19) 99247-5859}
 \email{diego.assis@gmail.com}
