feat: add english resume content

--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Site Reliability Engineer at start-up company Kasa. 7+ years experience specializing in the backend development, infrastructure automation, and computer hacking/security. Super nerd who loves Vim, Linux and OS X and enjoys to customize all of the development environment. Interested in devising a better problem-solving method for challenging tasks, and learning new technologies and tools if the need arises.
+From Jataí, a municipality in southern Goiás state, Brazil, has earned his degree in \textbf{Computer Engineering} from \textbf{Unicamp} (\href{https://en.wikipedia.org/wiki/University_of_Campinas}{University of Campinas}). Since 2009, works as a \textbf{system developer analyst} at Unicamp Institute of Chemistry, mostly developing \textbf{full stack web applications} using \textit{Node.js}, \textit{Angular}, \textit{SQL} and \textit{MongoDB}. Also has fluency programming in \textit{Python}, \textit{TypeScript}, \textit{Shell Script}, \textit{PHP} and using \textit{Regular Expressions}. Has a \textbf{solid conceptual basis}, \textbf{easy learning} and \textbf{good communication skills}. Recently became interested in the \textbf{data field} and, since then, is dedicated to learning more and more and changing his working focus.
 \end{cvparagraph}
