--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -53,15 +53,15 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Byungjin}{Park}
-\position{Software Architect{\enskip\cdotp\enskip}Security Expert}
-\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
+\name{Diego}{Assis}
+\position{Software Engineer}
+\address{Campinas, São Paulo - Brazil}
 
-\mobile{(+82) 10-9030-1843}
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\mobile{+55 (19) 99247-5859}
+\email{diego.assis@gmail.com}
+\homepage{dieguim.github.io}
+\github{dieguim}
+\linkedin{dieguim}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
@@ -73,7 +73,7 @@
 % \googlescholar{googlescholar-id}{}
 % \extrainfo{extra informations}
 
-\quote{``Be the change that you want to see in the world."}
+%\quote{``Be the change that you want to see in the world."}
 
 
 %-------------------------------------------------------------------------------
@@ -87,7 +87,7 @@
 % Leave any of these blank if they are not needed
 \makecvfooter
   {\today}
-  {Byungjin Park~~~·~~~Résumé}
+  {Diego Assis}
   {\thepage}
 
 
@@ -96,12 +96,13 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{resume/summary.tex}
+\input{resume/education.tex}
 \input{resume/experience.tex}
+\input{resume/skills.tex}
 \input{resume/honors.tex}
 \input{resume/presentation.tex}
 \input{resume/writing.tex}
 \input{resume/committees.tex}
-\input{resume/education.tex}
 \input{resume/extracurricular.tex}
 
 
