--- a/examples/resume-ptbr/summary.tex
+++ b/examples/resume-ptbr/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Natural de Jataí, GO, se graduou em \textbf{Engenharia de Computação} pela \textbf{Unicamp} (Universidade Estadual de Campinas). Desde 2009, atua como \textbf{analista de desenvolvimento de sistemas} no Instituto de Química da Unicamp, desenvolvendo principalmente aplicações \textbf{web full stack} com \textit{Node.js}, \textit{Angular}, \textit{SQL} e \textit{MongoDB}. Fluente também em \textit{Python}, \textit{TypeScript}, \textit{Shell Script}, \textit{PHP} e \textit{Expressões Regulares}. Possui \textbf{sólida base conceitual}, \textbf{facilidade em adquirir novos conhecimentos} e \textbf{boa habilidade comunicativa}. Recentemente se interessou pela \textbf{área de dados} e, desde então, se dedica a aprender cada vez mais e transformar seu foco de atuação.
+Natural de Jataí, GO, graduou-se em \textbf{Engenharia de Computação} pela \textbf{Unicamp} (Universidade Estadual de Campinas). Desde 2009, atua como \textbf{analista de desenvolvimento de sistemas} no Instituto de Química da Unicamp, desenvolvendo principalmente aplicações \textbf{web full stack} com \textit{Node.js}, \textit{Angular}, \textit{SQL} e \textit{MongoDB}. Fluente também em \textit{Python}, \textit{TypeScript}, \textit{Shell Script}, \textit{PHP} e \textit{Expressões Regulares}. Possui \textbf{sólida base conceitual}, \textbf{facilidade em adquirir novos conhecimentos} e \textbf{boa habilidade comunicativa}. Recentemente se interessou pela \textbf{área de dados} e, desde então, se dedica a aprender cada vez mais e transformar seu foco de atuação.
 \end{cvparagraph}
