--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,7 +17,7 @@
     {Sep. 2009 — Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Develop and maintain web applications used by students, professors and staff at Unicamp Institute of Chemistry}
+        \item {Develop and maintain web applications needed by students, professors and staff at Unicamp Institute of Chemistry}
         \item {Full stack development with JavaScript/TypeScript, using \textit{Node.js} and \textit{Angular} most of the time}
         \item {Operate relational (\textit{MySQL}, \textit{PostgreSQL} and \textit{SQL Server}) and non-relational (\textit{MongoDB}) databases}
         \item {Sometimes write \textit{bash scripts} and \textit{PHP} and \textit{.net} codes}
