fix: improve resume content
- Remove website from personal info
- Add linux and open source in summary

--- a/examples/resume-ptbr.tex
+++ b/examples/resume-ptbr.tex
@@ -62,7 +62,7 @@
 
 \mobile{+55 (19) 99247-5859}
 \email{diego.assis@gmail.com}
-\homepage{dieguim.github.io}
+%\homepage{dieguim.github.io}
 \github{dieguim}
 \linkedin{dieguim}
 % \gitlab{gitlab-id}
