fix: improve english resume
- Better summary
- Add IFSP specialization to education section

--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,8 +11,15 @@
 
 %---------------------------------------------------------
   \cventry
-    {BS in Computer Engineering} % Degree
-    {Unicamp (University of Campinas)} % Institution
+    {Specialist in Data Science}
+    {\href{https://ifsp.edu.br}{IFSP (Federal Institute of Education, Science and Technology of São Paulo)}}
+    {Campinas, Brazil}
+    {Apr. 2021 - Present}
+    {}
+
+  \cventry
+    {BE in Computer Engineering} % Degree
+    {\href{https://unicamp.br}{Unicamp (University of Campinas)}} % Institution
     {Campinas, Brazil} % Location
     {Mar. 2003 - Jul. 2009} % Date(s)
     {}
