--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-From Jataí, a municipality in southern Goiás state, Brazil, has earned his degree in \textbf{Computer Engineering} from \textbf{Unicamp} (\href{https://en.wikipedia.org/wiki/University_of_Campinas}{University of Campinas}). Since 2009, works as a \textbf{system developer analyst} at Unicamp Institute of Chemistry, mostly developing \textbf{full stack web applications} using \textit{Node.js}, \textit{Angular}, \textit{SQL} and \textit{MongoDB}. Also has fluency programming in \textit{Python}, \textit{TypeScript}, \textit{Shell Script}, \textit{PHP} and using \textit{Regular Expressions}. Two decades \textit{Linux} user and open source enthusiast. Has a \textbf{solid conceptual basis}, \textbf{easy learning} and \textbf{good communication skills}. Recently became interested in the \textbf{data field} and, since then, is dedicated to learning more and more and changing his working focus.
+Software engineer with 10+ years of experience. Has earned his degree in \textbf{Computer Engineering} from \textbf{Unicamp} (\href{https://en.wikipedia.org/wiki/University_of_Campinas}{University of Campinas}). Since 2009, works as a \textbf{system developer analyst} at Unicamp Institute of Chemistry, mostly developing \textbf{full stack web applications} using \textit{Node.js}, \textit{Angular}, \textit{SQL} and \textit{MongoDB}. Also has fluency programming in \textit{Python}, \textit{TypeScript}, \textit{Shell Script}, \textit{PHP} and using \textit{Regular Expressions}. Two decades \textit{Linux} user and open source enthusiast. Has a \textbf{solid conceptual basis}, \textbf{ease in learning} and \textbf{good communication skills}. Also interested in \textbf{data science and engineering}, currently graduate student in data science at \href{https://en.wikipedia.org/wiki/Federal_Institute_of_S%C3%A3o_Paulo}{Federal Institue of São Paulo}.
 \end{cvparagraph}
